@@ -74,7 +74,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.016002
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.016003
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
 
@@ -269,6 +269,7 @@ Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
 Dist::Zilla::Plugin::Git::NextVersion::Sanitized = 0
 CPAN::Meta = 0
 CPAN::Meta::Prereqs::Diff = 0
+CPAN::Changes::Group::Dependencies::Stats = 0
 Net::GitHub = 0
 JSON = 0
 JSON::XS = 0
