@@ -110,6 +110,7 @@ Dist::Zilla::Plugin::Git::NextVersion::Sanitized = 0
 
 CPAN::Meta                           = 0
 CPAN::Meta::Prereqs::Diff            = 0
+CPAN::Changes::Group::Dependencies::Stats = 0
 Net::GitHub                          = 0
 JSON                                 = 0
 JSON::XS                             = 0
