@@ -1,6 +1,14 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 2.016004
+ [Added / runtime recommends]
+ - CPAN::Changes::Group::Dependencies::Stats
+
+ [Changed / develop requires]
+ - Dist::Zilla::Plugin::Bootstrap::lib 1.000001 → 1.000002
+
+ [Changed / runtime requires]
+ - Dist::Zilla::Plugin::Bootstrap::lib 1.000001 → 1.000002
 
 2.016003 2014-07-15T09:01:30Z
  [Changed / develop requires]
